--- a/index.html
+++ b/index.html
@@ -8,7 +8,32 @@
 </head>
 <body>
     <div class="container">
-        Hello World
+        <p>Enter your text or URL</p>
+        <input type="text" id="qrText" placeholder="Text or URL">
+
+        <div id="qrCode">
+            <img src="" id="qrImg" alt="QR Code">
+        </div>
+        
+        <button onclick="generateQR()">Generate QR Code</button>
     </div>
+
+    <script>
+        let qrCode = document.getElementById('qrCode');
+        let qrText = document.getElementById('qrText');
+        let qrImg = document.getElementById('qrImg');
+
+        function generateQR() {
+            if(qrText.value.length > 0) {
+                qrImg.src = "https://api.qrserver.com/v1/create-qr-code/?size=250x250&data=" + qrText.value;
+                qrCode.classList.add("show-img");
+            } else {
+                qrText.classList.add("error");
+                setTimeout(() => {
+                    qrText.classList.remove("error");
+                }, 1000);
+            }
+        }
+    </script>
 </body>
 </html>
